Modified Creators section of the Landing Page.
Added two images and modified index.html.

--- a/index.html
+++ b/index.html
@@ -147,6 +147,19 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-lg-4 col-lg-offset-2 text-center">
+                    <img class="img-responsive img-circle" src="img/eric.jpg" >
+                    <h3>Eric Cao</h3>
+                    <p>"I call mid-lane."</p>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <img class="img-responsive img-circle" src="img/kelly.jpg">
+                    <h3>Kelly Nguyen</h3>
+                    <p>"No cop, no stop!"</p>
+                </div>
+            </div>
+            <br>
+            <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
