--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Currently, there are a plethora of social media applications; and it’s making it hard to keep track of the people you care about. Staying in touch with family, friends, and celebrities becomes a tedious and repetitive task. You have to open each individual social media app, search that person, and view their profile to see if any changes have occurred.</p>
+                    <p>Currently, there are a plethora of social media applications; and it’s making it hard to keep track of the people you care about. Staying in touch with family, friends, and celebrities becomes a tedious and repetitive task. You have to open each individual social media app, search that person, and view their profile to see if any changes have occurred.</p>                
                 </div>
                 <div class="col-lg-4">
-                    <p>Knowsie is an Android app designed to help you keep track of important individuals in your life. The concept is simple: declare which usernames you would like to monitor, group them accordingly, and get real-time push notifications directly to your phone whenever that user makes updates to their social media page.</p>
+                    <p>Knowsie is an Android app designed to help you keep track of important individuals in your life. The concept is simple: declare which usernames you would like to monitor and group them accordingly. The Knowsie Newsfeed will only contain updates from those most important to you.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="https://play.google.com/store/apps/details?id=cs499.knowsie&hl=en" class="btn btn-lg btn-outline">
