Added Screenshots and fixed content.

--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
             <div class="row text-center">
                 <center>
                 <img class="img-responsive" src="img/1.png">
-                <p>Log in using Twitter</p><br>
-
+                <p>Log in using Twitter and Instagram</p><br>
+                <img src="img/open_app.png"> <img src="img/twitter_login.png"> <img src="img/insta_login.png"> <br>
+                
                 <img class="img-responsive" src="img/2.png">
-                <p>Create a Knowsie Group</p><br>
+                <p>Create a Knowsie Group and add desired usernames</p><br>
+                <img src="img/sidemenu.png"> <img src="img/addgroup.png">
 
                 <img class="img-responsive" src="img/3.png">
-                <p>Add usernames of social media (Twitter or Instagram) to your Group</p><br>
-
-                <img class="img-responsive" src="img/4.png">
-                <p>Change your refresh interval if desired, and begin using Knowsie!</p>
+                <p>The Knowsie Newsfeed will only contain updates from those most important to you!</p><br>
+                <img class="img-responsive" src="img/knowsie_feed.png">
                 </center>
             </div>
         </div>
